# bitchat-web

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/crypto/: mod.rs  noise.rs  session.rs
src-tauri/src/nostr/: client.rs  error.rs  mod.rs  types.rs
src/components/chat/: ChatHeader.tsx  ConversationList.tsx  MessageBubble.tsx  MessageInput.tsx  index.ts
src/components/layout/: AppLayout.tsx
src/components/settings/: AboutSection.tsx  IdentitySection.tsx  PerformanceSettings.tsx  PrivacySettings.tsx  RelayManager.tsx  ThemeSettings.tsx  index.ts
src/crypto/: index.ts
src/crypto/keys/: KeyManager.ts
src/crypto/noise/: NoiseCipherState.ts  NoiseHandshakeState.ts  NoiseSession.ts  NoiseSymmetricState.ts  index.ts  types.ts
src/crypto/nostr/: NostrEvent.ts  NostrProtocol.ts  index.ts
src/pages/: PrivateTab.tsx  SettingsTab.tsx
src/services/: MessageDeduplicationService.ts  PrivateChatService.ts  index.ts
src/storage/: Database.ts  IdentityStore.ts  MessageStore.ts  StorageManager.ts  index.ts
src/store/: index.ts  useChatStore.ts  useIdentityStore.ts  useRelayStore.ts  useSettingsStore.ts
src/transport/: index.ts
src/transport/nostr/: NostrRelayManager.ts  index.ts
src/types/: index.ts
