[package]
name = "bitchat"
version = "0.1.0"
description = "BitChat - Secure mesh messaging"
authors = ["BitChat Team"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "bitchat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Nostr dependencies
nostr-sdk = { version = "0.35", default-features = false, features = ["nip04", "nip17", "nip44", "nip59"] }
nostr = { version = "0.35", default-features = false, features = ["std"] }

# Async runtime
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# State management
parking_lot = "0.12"
once_cell = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
